docs/docs/1.0.0/html/_sources/gallery/tutorials/index.rst.txt
:orphan:



.. _sphx_glr_gallery_tutorials:

Tutorials
=========

Here are some end-to-end forecast examples on daily, weekly, and monthly data.


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a basic tutorial for creating and tuning a forecast model. It is intended to provide a ...">

.. only:: html

 .. figure:: /gallery/tutorials/images/thumb/sphx_glr_0100_forecast_tutorial_thumb.png
     :alt: Tune your first forecast model

     :ref:`sphx_glr_gallery_tutorials_0100_forecast_tutorial.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/0100_forecast_tutorial

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a basic example for monthly data using Silverkite. Note that here we are fitting a few ...">

.. only:: html

 .. figure:: /gallery/tutorials/images/thumb/sphx_glr_0200_monthly_data_thumb.png
     :alt: Example for monthly data

     :ref:`sphx_glr_gallery_tutorials_0200_monthly_data.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/0200_monthly_data

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a basic example for weekly data using Silverkite. Note that here we are fitting a few s...">

.. only:: html

 .. figure:: /gallery/tutorials/images/thumb/sphx_glr_0300_weekly_data_thumb.png
     :alt: Example for weekly data

     :ref:`sphx_glr_gallery_tutorials_0300_weekly_data.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/0300_weekly_data

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a basic tutorial for creating and tuning a Greykite AD (Anomaly Detection) model. It is...">

.. only:: html

 .. figure:: /gallery/tutorials/images/thumb/sphx_glr_0400_anomaly_detection_tutorial_thumb.png
     :alt: Tune your first anomaly detection model

     :ref:`sphx_glr_gallery_tutorials_0400_anomaly_detection_tutorial.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/tutorials/0400_anomaly_detection_tutorial
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
